--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Programmer Guides
+domain: tonydimalta.github.io
+url: https://tonydimalta.github.io
+baseurl: 
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Gameplay Programmer guides, best practices, and more.
